--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -75,9 +75,9 @@ What is an image file? It's a file that contains all the required software prein
     6.  Click **Save** to save and exit the dialog box.
 
 7. Click "Yes" to begin writing. A prompt *may* appear asking for permission to write, accept it. Writing will take up to 5 minutes. Perfect time for a tea break.
-7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
+7.  Once writing is complete, remove the microSD card, and place it into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor. Example for a Raspberry Pi A model:
 
-    ![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
+    ![Insert the microSD card into a Raspberry Pi A model](/img/user-guide/place-micro-sd-card.JPG)
 
 8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up momentarily. After **a few minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
@@ -112,7 +112,7 @@ Below is a screenshot of example settings, your settings might be slightly diffe
 <img src="/img/user-guide/rpi-imager-settings-worker.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
 
-2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on. The Pioreactor's blue LED won't blink, as it's not 100% ready yet.
+2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on. The Pioreactor's blue LED will light up and stay on, indicating that it's ready to be connected. Move onto the next step.
 
 3. After a few minutes, connect the new Pioreactor worker to your cluster using the UI. See next steps.
 
@@ -126,8 +126,7 @@ Provide the chosen hostname of the new worker Pioreactor:
 
 ![Add new pioreactor modal](/img/user-guide/add_new_pioreactor_modal.png)
 
-
-After a minute, the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up. Your new Pioreactor will also blink its blue LED.
+After a minute, the worker's blue LED will turn off, and the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up. Your new worker Pioreactor will also blink its blue LED telling you it's online.
 
 
 #### From the command line _(Alternative)_
