--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -112,9 +112,9 @@ Below is a screenshot of example settings, your settings might be slightly diffe
 <img src="/img/user-guide/rpi-imager-settings-worker.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
 
-2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on. The Pioreactor's blue LED will light up and stay on, indicating that it's ready to be connected. Move onto the next step.
+2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on.
 
-3. After a few minutes, connect the new Pioreactor worker to your cluster using the UI. See next steps.
+3. The Pioreactor's blue LED will light up and stay on, indicating that it's ready to be connected. Move onto the next step.
 
 #### Step 2. Add worker to cluster using the UI
 
