--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -36,7 +36,7 @@ What is an image file? It's a file that contains all the required software prein
 
 2.  Download the latest version of [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
 3.  Open the newly-installed Raspberry Pi Imager.
-3.  Click **Choose Device**, and select your Raspberry Pi model.
+3.  Click **Choose Device**, and "No filtering" at the top.
     ![Click "Choose Device"](/img/user-guide/choose_device.png)
 3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
     ![Click "Choose OS"](/img/user-guide/choose-os.png)
@@ -103,7 +103,7 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
 
    :::note
-   Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
+   Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc. Re-using old names is fine, so long as that worker isn't present in your cluster.
    :::
 
    Below is a screenshot of example settings, your settings might be slightly different.
