--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -117,15 +117,7 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
 #### Step 2. Add worker to cluster using the UI
 
-On the _Pioreactors_ page in the web interface, click the "Add new Pioreactor" button in the top right:
-
-![Add new pioreactor](/img/user-guide/add_new_pioreactor.png)
-
-Provide the chosen hostname of the new worker Pioreactor:
-
-![Add new pioreactor modal](/img/user-guide/add_new_pioreactor_modal.png)
-
-After a minute, the worker's blue LED will turn off, and the new Pioreactor should appear on the _Pioreactors_ and _Experiment Overview_ page. Refresh the page if it does not show up. Your new worker Pioreactor will also blink its blue LED telling you it's online.
+Follow the instructions [here to add your worker to your Pioreactor cluster](/user-guide/create-cluster#adding-pioreactors-to-your-cluster).
 
 
 #### From the command line _(Alternative)_
