new arch for assembly guides

--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -11,14 +11,14 @@ import Card from '@site/src/components/Card';
 <h3> Pioreactor 20ml </h3>
 
 <div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" />
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" isNew={true}/>
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.0_splash.png" headerText="Pioreactor 20ml v1.0" linkUrl="/user-guide/hardware-setup-intro"/>
 </div>
 
 <h3> Upgrade kits and accessories</h3>
 
 <div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" />
+    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" isNew={true} />
     <Card imageUrl="user-guide/add-teh/14_teh_finished.jpeg" headerText="Temperaure Expansion Kit" linkUrl="/user-guide/temperature-expansion-kit" />
     <Card imageUrl="user-guide/dosing_platform/pump10.JPG" headerText="Adding peristaltic pumps" linkUrl="/user-guide/using-pumps" />
 </div>
