--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -22,6 +22,7 @@ import Card from '@site/src/components/Card';
     <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" isNew={true} />
     <Card imageUrl="user-guide/add-teh/14_teh_finished.jpeg" headerText="Temperaure Expansion Kit" linkUrl="/user-guide/temperature-expansion-kit" />
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_dosing_splash.webp" headerText="Adding peristaltic pumps" linkUrl="/user-guide/using-pumps" />
+    <Card imageUrl="user-guide/leds_splash.webp" headerText="Adding more LEDs" linkUrl="/user-guide/using-leds" />
 </div>
 
 <h2> Software guides</h2>
