--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -11,7 +11,7 @@ import Card from '@site/src/components/Card';
 <h2> Pioreactor 20ml assembly</h2>
 
 <div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" isNew={true}/>
+    <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.1_splash.jpg" headerText="Pioreactor 20ml v1.1" isNew={true} linkUrl="/user-guide/hardware-setup-upgrade-version"/>
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_20ml_v1.0_splash.png" headerText="Pioreactor 20ml v1.0" linkUrl="/user-guide/hardware-setup-intro"/>
 </div>
 
