--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Getting started guides
 slug: /getting-started
 ---
 
@@ -18,7 +18,7 @@ import Card from '@site/src/components/Card';
 <h2> Upgrade kits and accessories</h2>
 
 <div class="cardGrid">
-    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" isNew={true} linkUrl="/user-guide/hardware-setup-intro"/>
+    <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" isNew={true} linkUrl="/user-guide/hardware-setup-upgrade-version"/>
     <Card imageUrl="user-guide/add-teh/14_teh_finished.jpeg" headerText="Temperaure Expansion Kit" linkUrl="/user-guide/temperature-expansion-kit" />
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_dosing_splash.webp" headerText="Adding peristaltic pumps" linkUrl="/user-guide/using-pumps" />
     <Card imageUrl="user-guide/leds_splash.webp" headerText="Adding more LEDs" linkUrl="/user-guide/using-leds" />
