better font color for dark mode

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -1,4 +1,5 @@
 ---
+id: software-set-up
 description: Install the Pioreactor software onto the Raspberry Pi
 title: Software installation
 slug: /software-set-up
