--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -119,7 +119,7 @@ Dis-attach the top faceplate. Under the faceplate, slightly unscrew each of the 
 
 #### How can I increase the strength of the magnetic force applied to the stirbar?
 
-Try to reduce the distance between the stirring magnets and the stir bar by carefully raising the stirring fan a small amount. Going even further, you can remove the 4mm screws in the bottom of the vial holder (but find another way to secure the PCB), thereby be able to bring the magnets even closer.
+**For Pioreactor 20ml v1.0**: Try to reduce the distance between the stirring magnets and the stir bar by carefully raising the stirring fan a small amount. Going even further, you can remove the 4mm screws in the bottom of the vial holder (but find another way to secure the PCB), thereby be able to bring the magnets even closer.
 
 #### How can I improve mixing and aeration?
 
