--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -242,7 +242,7 @@ Depending on your access to the Pioreactor, there are a few ways:
 
 ##### To install a plugin
 
-On a computer that is connected to the internet, download the `.whl` file from the plugins webpage on PyPI. Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to install the plugin on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio install-plugin <plugin-name> <path/to/local/.whl>`
+On a computer that is connected to the internet, download the `.whl` file from the plugins webpage on PyPI. Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to install the plugin on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio plugins install <plugin-name> <path/to/local/.whl>`
 
 
 ##### To upgrade the Pioreactor software
