--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -134,13 +134,14 @@ If the standard mixing and aeration with the stir bar is not enough for your app
 Raspberry Pi Hardware
 ---------------------
 
-#### What Raspberry Pi hardware can I use? I see Raspberry Pi 1, 2, 3, 4, A, B, +, Zero - it's confusing!
+#### What Raspberry Pi hardware can I use? I see Raspberry Pi 1, 2, 3, 4, 5, A, B, +, Zero - it's confusing!
 
 We've designed the hardware and software to be compatible with any Raspberry Pi that has onboard Wifi and a 40 pin header. That includes (at the time of writing):
 
 *   Raspberry Pi 3 Model B & B+
 *   Raspberry Pi 3 Model A+
 *   Raspberry Pi 4 Model B ³
+*   Raspberry Pi 5 Model B
 *   Raspberry Pi Zero W (with header) ¹
 *   Raspberry Pi Zero 2 W (with header)
 *   Raspberry Pi 400 ²
@@ -224,9 +225,13 @@ Unfortunately, the microSD card becoming corrupted or damaged is an infrequent b
 Networking
 ---------------------------------
 
-#### Can I use Ethernet cable connections instead of WIFI connections?
+#### How do I change/edit the network the Pioreactor on?
 
-Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and WIFI is fine.
+With modern Raspberry Pis,
+
+#### Can I use Ethernet cable connections instead of Wifi connections?
+
+Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and Wifi is fine.
 
 #### How can I determine the Pioreactor's IP address? Or the MAC address?
 
