--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -62,6 +62,8 @@ What is an image file? It's a file that contains all the required software prein
     4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet.
 	:::tip
     If you are having difficulty connecting to a network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
+
+    Note that any tutorials that mention `wpa_supplicant.conf` are **out of date**. This has been deprecated by Raspberry Pis for a while. We have some further documentation on [networking available here](/user-guide/networking).
 	:::
 	
     5. Change timezone to your local timezone.
