--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -147,7 +147,7 @@ If the standard mixing and aeration with the stir bar is not enough for your app
 4. Add a [baffle](https://www.printables.com/model/575292-baffle-for-pioreactor-vial-cap-a/files) to the vial cap. A simple cylinder that rests into the liquid causes disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
 5. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
 
-### Can I plot the RPM in a chart in the UI?
+#### Can I plot the RPM in a chart in the UI?
 
 Yes, follow the instructions [here](https://forum.pioreactor.com/t/creating-stirring-rpm-and-pwm-duty-cycle-charts-on-the-ui/339).
 
@@ -162,7 +162,7 @@ We've designed the hardware and software to be compatible with any Raspberry Pi 
 *   Raspberry Pi 3 Model B & B+
 *   Raspberry Pi 3 Model A+
 *   Raspberry Pi 4 Model B ³
-*   Raspberry Pi 5 Model B
+*   Raspberry Pi 5 Model B ³
 *   Raspberry Pi Zero W (with headers) ¹
 *   Raspberry Pi Zero 2 (with headers)
 *   Raspberry Pi 400 ²
@@ -175,7 +175,7 @@ Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspb
 
 ² The Raspberry Pi 400 has its 40 pin header exposed in a different orientation, so your Pioreactor won't be able to sit on top like for other RPi versions. Take a [look at this forum post](https://forum.pioreactor.com/t/using-a-raspberry-pi-400/113/8) to see how another user used the Raspberry Pi 400 with their Pioreactor.
 
-³ Note that you don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM option RPi 4s (1GB or 2GB) to save some money. However, 4GB and 8GB are fine, too.
+³ Note that you don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM option RPi (1GB or 2GB) to save some money. However, anything above is fine, too.
 
 #### What microSD cards do you recommend?
 
