--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -183,7 +183,9 @@ At least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for th
 
 #### What power supply unit (PSU) do I need?
 
-If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W. We really like the official Raspberry Pi PSUs, available at most places you can purchase Raspberry Pis.
+If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W. We really like the [official Raspberry Pi PSUs](https://www.raspberrypi.com/products/#power-supplies-and-cables), available at most places you can purchase Raspberry Pis.
+
+If you need to power multiple Pioreactors, you might consider a single PSU with USB ports [detailed here](/user-guide/powering-cluster).
 
 #### Do I need any cooling for the Raspberry Pi?
 
