move files around

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -255,7 +255,7 @@ See documentation on networking [here](/user-guide/networking#general-networking
 
 #### Can I use Ethernet cable connections instead of Wifi connections?
 
-Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and Wifi is fine.
+Yes, so long as the Raspberry Pi's are connected to the same network and discoverable, this should work. Even mixing Ethernet and Wifi is fine. You can read more about networking Pioreactors [here](/user-guide/networking).
 
 #### How can I determine the Pioreactor's IP address? Or the MAC address?
 
