--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -161,18 +161,20 @@ We've designed the hardware and software to be compatible with any Raspberry Pi 
 
 *   Raspberry Pi 3 Model B & B+
 *   Raspberry Pi 3 Model A+
-*   Raspberry Pi 4 Model B ²
-*   Raspberry Pi 5 ²
+*   Raspberry Pi 4 Model B ² ³
+*   Raspberry Pi 5 ² ³
 *   Raspberry Pi Zero W (with headers) ¹
 *   Raspberry Pi Zero 2 (with headers)
 
 
-Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspberry Pi Zero 2** because of their low power consumption, slim build, and low price. Both have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't have ethernet connections! So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi
-3 B or 4 B.
+Although you can use any above, **we like the Raspberry Pi 4 Model B, and Raspberry Pi Zero 2**. Both have the necessary CPU power and memory for the Pioreactor workload, and are generally easy to source. However, they don't a ethernet connector built-in. So talk to your team about if you need to use ethernet or wifi. If you need ethernet, we like the model RPi
+3 B+ or 4 B, or purchase some microUSB-to-ethernet dongles for the RPi Zero 2.
 
 ¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all roles.
 
 ² You don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM RPi if offered a choice. 1GB is fine.
+
+³ These have a USB-C power connector, whereas the other Pis have a microUSB power connector.
 
 #### What microSD cards do you recommend?
 
